[package]
name = "omni-spacetimedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
byteorder = "1.5.0"
parking_lot = { version = "0.12.1", features = ["send_guard", "arc_lock"] }
omnipaxos = "0.2.2"
omnipaxos_storage = "0.2.2"
tokio = {version = "1.36.0", features = ["full"]}

[dev-dependencies]
tempdir = "0.3.7"